Fix navbar on mobile, css order.

--- a/static/css/intrinsic.css
+++ b/static/css/intrinsic.css
@@ -97,7 +97,7 @@ footer a:hover {
 
 /* Navbar */
 .navbar { /* Fix for certain browsers. */
-    min-height: 71px;
+    display: block;
 }
 
 .navbar .logo {
